--- a/styles/style.css
+++ b/styles/style.css
@@ -341,6 +341,7 @@ hr {
 .tag {
     font-family: var(--font-family-sans);
     font-size: var(--font-size-xs);
+    line-height: var(--line-height-base);
     font-weight: var(--font-weight-regular);
     padding: 1px 3px 1px 3px;
     white-space: nowrap;
@@ -699,8 +700,23 @@ hr {
         margin-bottom: 2rem;
     }
 
+    .cases {
+        margin-bottom: 2rem;
+    }
+
     .cases-container {
-        gap: 1rem;
+        gap: 0.5rem;
+    }
+
+    .case-title {
+    display: grid;
+    grid-template-columns: 1fr max-content;
+    column-gap: 16px;
+    align-items: end;
+    }
+
+    .tags{
+        margin-bottom: 4.5px;
     }
 
     .mobile-nav {
